--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,35 @@
-decorator
-Flask
-gunicorn
-Jinja2
-MarkupSafe
-migrate
-pbr
-Pillow
-six
-Werkzeug
-wheel
-gspread
-pytz
-Flask-PyMongo
-pymongo
-dnspython
-MarkupSafe
+blinker==1.7.0
+cachetools==5.3.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+decorator==5.1.1
+dnspython==2.5.0
+Flask==3.0.2
+Flask-PyMongo==2.3.0
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+gspread==6.0.1
+gunicorn==21.2.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+migrate==0.3.8
+oauthlib==3.2.2
+packaging==23.2
+pbr==6.0.0
+pillow==10.2.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pymongo==4.6.1
+python-dateutil==2.8.2
+pytz==2024.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+StrEnum==0.4.15
+urllib3==2.2.0
+Werkzeug==3.0.1
+python-dotenv==1.1.0
